crates/ruff_linter/src/rules/flake8_builtins/snapshots/ruff_linter__rules__flake8_builtins__tests__A003_A003.py_builtins_ignorelist.snap
---
source: crates/ruff_linter/src/rules/flake8_builtins/mod.rs
---
A003 Python builtin is shadowed by method `property` from line 26
  --> A003.py:31:7
   |
31 |     @[property][0]
   |       ^^^^^^^^
   |

A003 Python builtin is shadowed by class attribute `bin` from line 35
  --> A003.py:36:12
   |
36 |     foo = [bin]
   |            ^^^
   |
