crates/ruff_linter/src/rules/flake8_builtins/snapshots/ruff_linter__rules__flake8_builtins__tests__A004_A004.py_builtins_ignorelist.snap
---
source: crates/ruff_linter/src/rules/flake8_builtins/mod.rs
---
A004 Import `sum` is shadowing a Python builtin
 --> A004.py:1:16
  |
1 | import some as sum
  |                ^^^
  |

A004 Import `float` is shadowing a Python builtin
 --> A004.py:2:8
  |
2 | import float
  |        ^^^^^
  |

A004 Import `int` is shadowing a Python builtin
 --> A004.py:3:27
  |
3 | from some import other as int
  |                           ^^^
  |

A004 Import `input` is shadowing a Python builtin
 --> A004.py:4:18
  |
4 | from some import input, exec
  |                  ^^^^^
  |

A004 Import `exec` is shadowing a Python builtin
 --> A004.py:4:25
  |
4 | from some import input, exec
  |                         ^^^^
  |

A004 Import `BaseExceptionGroup` is shadowing a Python builtin
  --> A004.py:11:32
   |
11 |     from exceptiongroup import BaseExceptionGroup, ExceptionGroup
   |                                ^^^^^^^^^^^^^^^^^^
   |

A004 Import `ExceptionGroup` is shadowing a Python builtin
  --> A004.py:11:52
   |
11 |     from exceptiongroup import BaseExceptionGroup, ExceptionGroup
   |                                                    ^^^^^^^^^^^^^^
   |
