crates/ruff_linter/src/rules/flake8_builtins/snapshots/ruff_linter__rules__flake8_builtins__tests__builtin-argument-shadowing_A002.py_builtins_ignorelist.snap
---
source: crates/ruff_linter/src/rules/flake8_builtins/mod.rs
---
A002 Function argument `str` is shadowing a Python builtin
 --> A002.py:1:11
  |
1 | def func1(str, /, type, *complex, Exception, **getattr):
  |           ^^^
2 |     pass
  |

A002 Function argument `type` is shadowing a Python builtin
 --> A002.py:1:19
  |
1 | def func1(str, /, type, *complex, Exception, **getattr):
  |                   ^^^^
2 |     pass
  |

A002 Function argument `complex` is shadowing a Python builtin
 --> A002.py:1:26
  |
1 | def func1(str, /, type, *complex, Exception, **getattr):
  |                          ^^^^^^^
2 |     pass
  |

A002 Function argument `Exception` is shadowing a Python builtin
 --> A002.py:1:35
  |
1 | def func1(str, /, type, *complex, Exception, **getattr):
  |                                   ^^^^^^^^^
2 |     pass
  |

A002 Function argument `getattr` is shadowing a Python builtin
 --> A002.py:1:48
  |
1 | def func1(str, /, type, *complex, Exception, **getattr):
  |                                                ^^^^^^^
2 |     pass
  |

A002 Function argument `bytes` is shadowing a Python builtin
 --> A002.py:5:17
  |
5 | async def func2(bytes):
  |                 ^^^^^
6 |     pass
  |
